--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 <div id="inputArea">
     <div class="input">
-        <h2>I would love to see your massage</h2>
+        <h2>I would love to see your message</h2>
         <h4>your name</h4>
         <input type="text" name="" id="name">
         <h4>your Email</h4>
