--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </svg>
         </div>
         <div class="links">
-            <a href="">Portfolio</a>
+            <a href="https://598415.klas4s24.mid-ica.nl/">Portfolio</a>
             <a id="button">contact</a>
         </div>
     </nav>
